--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@google/genai": "^1.11.0",
-    "recharts": "^3.1.0",
-    "react-dom": "^19.1.0",
+    "@supabase/supabase-js": "^2.53.0",
     "react": "^19.1.0",
-    "react-router-dom": "^7.7.1"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.7.1",
+    "recharts": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
